Fixed scrollbar gutter pushing content for new data box

--- a/Website/css/dynamictable.css
+++ b/Website/css/dynamictable.css
@@ -18,6 +18,7 @@
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
          box-shadow: 0 8px 6px -6px black;
+    scrollbar-gutter: stable;
   }
 
 .wrapper input:focus {
@@ -72,7 +73,7 @@ input[type="number"]{
   }
   .controls h2 {
     display: inline;
-    font-size: 32px;
+    font-size: 30px;
     padding: 0;
     margin: 0;
   }
